PO-901: Fix payload structure and ID types for draft account tests